@@ -96,7 +96,7 @@ class Message {
 
 	/**
 	 * Constructor.
-	 * @param $key String: message key
+	 * @param $key: message key, or array of message keys to try and use the first non-empty message for
 	 * @param $params Array message parameters
 	 * @return Message: $this
 	 */
@@ -119,6 +119,28 @@ class Message {
 		$params = func_get_args();
 		array_shift( $params );
 		return new self( $key, $params );
+	}
+
+	/**
+	 * Factory function accepting multiple message keys and returning a message instance
+	 * for the first message which is non-empty. If all messages are empty then an
+	 * instance of the first message key is returned.
+	 * @param Varargs: message keys
+	 * @return Message: $this
+	 */
+	public static function newFallbackSequence( /*...*/ ) {
+		global $wgMessageCache;
+		$keys = func_get_args();
+		if ( func_num_args() == 1 ) {
+			if ( is_array($keys[0]) ) {
+				// Allow an array to be passed as the first argument instead
+				$keys = array_values($keys[0]);
+			} else {
+				// Optimize a single string to not need special fallback handling
+				$keys = $keys[0];
+			}
+		}
+		return new self( $keys );
 	}
 
 	/**
@@ -336,7 +358,7 @@ class Message {
 	protected function getMessageText() {
 		$message = $this->fetchMessage();
 		if ( $message === false ) {
-			return '&lt;' . htmlspecialchars( $this->key ) . '&gt;';
+			return '&lt;' . htmlspecialchars( is_array($this->key) ? $this->key[0] : $this->key ) . '&gt;';
 		} else {
 			return $message;
 		}
@@ -348,7 +370,17 @@ class Message {
 	protected function fetchMessage() {
 		if ( !isset( $this->message ) ) {
 			global $wgMessageCache;
-			$this->message = $wgMessageCache->get( $this->key, $this->useDatabase, $this->language );
+			if ( is_array($this->key) ) {
+				foreach ( $this->key as $key ) {
+					$message = $wgMessageCache->get( $key, $this->useDatabase, $this->language );
+					if ( $message !== false && $message !== '' ) {
+						break;
+					}
+				}
+				$this->message = $message;
+			} else {
+				$this->message = $wgMessageCache->get( $this->key, $this->useDatabase, $this->language );
+			}
 		}
 		return $this->message;
 	}
